# bazel-llvm

./: .bazelrc  .clang-format  .clang-tidy  .editorconfig  .eslintrc.json  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  MODULE.bazel  README.md  TODOs.md  WORKSPACE.bazel  bazel-bazel-llvm  bazel-bin  bazel-out  bazel-testlogs  cifuzz.yaml  nodemon.json  package.json  pnpm-lock.yaml  renovate.json  requirements.in  requirements_lock.txt
.buildkite/: pipeline.yaml
.circleci/: config.yaml
.github/: dependabot.yml
.github/workflows/: ci_bazel.yaml  ci_trunk.yaml  ci_trunk_nightly.yaml
.trunk/: trunk.yaml
bazel/build_tools/: go_yaml.BUILD
bazel/rules_hugo/: hugo_repository.bzl  hugo_site.bzl
build_defs/: BUILD.bazel  llvm.bzl
docker/: Dockerfile.buildkite_ubuntu  Dockerfile.ubuntu
docker/buildkite/: Dockerfile.buildkite_alpine  Dockerfile.buildkite_ubuntu
docker/nginx/: Dockerfile.nginx_hugo
docker/ubuntu/: Dockerfile.ubuntu_bazel
docs/: BUILD.bazel  llvm.md
docs/bazel/: BUILD.bazel  llvm.md
docs/config/_default/: config.yaml  languages.yaml  params.yaml
docs/content/en/: _index.md
docs/content/en/contributing/: _index.md  code_of_conduct.md
docs/data/menu/: main.yaml
docs/themes/hugo-geekdoc/: README.md
docs/themes/hugo-geekdoc/archetypes/: docs.md  posts.md
docs/themes/hugo-geekdoc/data/: assets.json
docs/themes/hugo-geekdoc/i18n/: cs.yaml  de.yaml  en.yaml  it.yaml  ja.yaml  zh-cn.yaml
docs/themes/hugo-geekdoc/layouts/: 404.html
docs/themes/hugo-geekdoc/layouts/_default/: baseof.html  terms.html
docs/themes/hugo-geekdoc/layouts/_default/_markup/: render-image.html
docs/themes/hugo-geekdoc/layouts/partials/: menu-extra.html  menu-nextprev.html  pagination.html  search.html  site-header.html
docs/themes/hugo-geekdoc/layouts/partials/head/: favicons.html  meta.html  microformats.html
docs/themes/hugo-geekdoc/layouts/partials/microformats/: opengraph.html  schema.html  twitter_cards.html
docs/themes/hugo-geekdoc/layouts/partials/utils/: description.html  featured.html  title.html
docs/themes/hugo-geekdoc/layouts/posts/: single.html
docs/themes/hugo-geekdoc/layouts/shortcodes/: columns.html  expand.html  hint.html  icon.html  include.html  propertylist.html  tab.html  toc-tree.html  toc.html
docs/themes/hugo-geekdoc/static/: katex-e4de31b5.min.css  main-2e955f90.min.css  mobile-c0e18b0e.min.css  print-735ccc12.min.css
docs/themes/hugo-geekdoc/static/favicon/: manifest.json
docs/themes/hugo-geekdoc/static/js/: 116-b53487e8.chunk.min.js  748-03e0b93c.chunk.min.js  890-48636e10.chunk.min.js  colortheme-d3e4d351.bundle.min.js  katex-29fdb1f1.bundle.min.js  main-56ca818c.bundle.min.js  mermaid-6fe04829.bundle.min.js  search-835dce8f.bundle.min.js
examples/replxx_api/: BUILD.bazel  replxx.cc  replxx_api.cc
foo/: BUILD.bazel  bar.cc  bar.h
greeting/: BUILD.bazel  greeting.cc  greeting.h  greeting_test.cc
kaleidoscope/src/: BUILD.bazel  main.cc
kaleidoscope/src/ast/: BUILD.bazel  binary_expr_ast.cc  binary_expr_ast.h  call_expr_ast.cc  call_expr_ast.h  expr_ast.h  function_ast.cc  number_expr_ast.cc  number_expr_ast.h  prototype_ast.cc  variable_expr_ast.h
kaleidoscope/src/driver/: BUILD.bazel  driver.cc  driver.h
kaleidoscope/src/globals/: BUILD.bazel  jit.h
kaleidoscope/src/ir_gen/: BUILD.bazel  ir_gen.cc  ir_gen.h
kaleidoscope/src/lexer/: token.h
kaleidoscope/src/logger/: BUILD.bazel  logger.cc  logger.h
kaleidoscope/src/parser/: BUILD.bazel  parser.cc  parser.h
kaleidoscope/src/passes/: BUILD.bazel  pass_manager.cc
mandelbrot/src/: BUILD.bazel  main.cc
mandelbrot/src/cli/: BUILD.bazel  cli.cc  cli.h
mandelbrot/src/driver/: BUILD.bazel  driver.cc  driver.h
mandelbrot/src/lexer/: BUILD.bazel  lexer.h  lexer_test.cc  token.h
mandelbrot/src/logger/: BUILD.bazel  logger.cc  logger.h
mandelbrot/src/repl/: BUILD.bazel  repl.cc  repl.h
mandelbrot/src/source_buffer/: BUILD.bazel  source_buffer.cc  source_buffer.h  source_buffer_test.cc
mandelbrot/src/utils/: BUILD.bazel  utils.cc  utils.h
scripts/: bazel_build_all.sh  bazel_test_all.sh  clang_format.sh  clang_tidy_all.sh  deploy_docs_cd.sh
src/: BUILD.bazel  main.cc
src/ast/: BUILD.bazel  BinaryExprAST.h  CallExprAST.h  ExprAST.h  FunctionAST.h  NumberExprAST.h  PrototypeAST.h  VariableExprAST.h  binary_expr_ast.cc  binary_expr_ast.h  call_expr_ast.cc  call_expr_ast.h  expr_ast.h  function_ast.cc  function_ast.h  number_expr_ast.cc  number_expr_ast.h  prototype_ast.cc  prototype_ast.h  variable_expr_ast.cc  variable_expr_ast.h
src/driver/: BUILD.bazel  driver.cc  driver.h
src/globals/: BUILD.bazel  globals.cc  globals.h  jit.cc  kaleidoscope_jit.h
src/ir_gen/: BUILD.bazel  ir_gen.cc  ir_gen.h
src/kaleidoscope/: BUILD.bazel  kaleidoscope.cc  kaleidoscope.h
src/lexer/: BUILD.bazel  lexer.cc  lexer.h  token.h
src/logger/: BUILD.bazel  logger.cc  logger.h
src/parser/: BUILD.bazel  parser.cc  parser.h
src/passes/: BUILD.bazel  pass_manager.cc  pass_manager.h
terraform/: main.tf
tools/generators/: BUILD.bazel  cc_generator.py  cc_lib_generator.py
tools/generators/cc_generator/: ccgen.py  cli.py  generators.py  logger.py  main.py  source_contents.py  utils.py
