load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [
        "//src/driver",
        "//src/lexer",
        "//src/logger",
        "//src/parser",
        "//src/passes:pass_manager",
        "@com_google_absl//absl/strings",
        "@com_google_glog//:glog",
        "@fmt",
        "@zlib",
        "@zstd//:zstd_lib",
    ],
)
