load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [
        "//kaleidoscope/src/driver",
        "//kaleidoscope/src/globals",
        "//kaleidoscope/src/lexer",
        "//kaleidoscope/src/logger",
        "//kaleidoscope/src/parser",
        "//kaleidoscope/src/passes:pass_manager",
        "@com_facebook_zstd//:zstd_lib",
        "@com_fmtlib_fmt//:fmt",
        "@com_google_absl//absl/strings",
        "@com_google_glog//:glog",
        "@com_madler_zlib//:zlib",
    ],
)
