load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "globals",
    srcs = ["globals.cc"],
    hdrs = [
        "globals.h",
    ],
    includes = ["."],
    deps = [
        ":jit",
        "@llvm",
    ],
)

cc_library(
    name = "jit",
    srcs = ["jit.cc"],
    hdrs = ["jit.h"],
    deps = ["@llvm"],
)
