load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "parser",
    srcs = ["parser.cc"],
    hdrs = [
        "parser.h",
    ],
    deps = [
        "//src/ast:binary_expr_ast",
        "//src/ast:number_expr_ast",
        "//src/ast:variable_expr_ast",
        "//src/ast:call_expr_ast",
        "//src/lexer",
        "//src/logger"
    ]
)
