load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "ir_gen",
    srcs = ["ir_gen.cc"],
    hdrs = ["ir_gen.h"],
    deps = [
        "//kaleidoscope/src/ast:prototype_ast",
        "//kaleidoscope/src/globals",
        "@llvm",
    ],
)
