load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "logger",
    srcs = ["logger.cc"],
    hdrs = [
        "logger.h",
    ],
    deps = [
        "//kaleidoscope/src/ast:expr_ast",
        "//kaleidoscope/src/ast:prototype_ast",
        "@com_fmtlib_fmt//:fmt",
    ],
)
