load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cli",
    srcs = ["cli.cc"],
    hdrs = ["cli.h"],
    deps = [
        "//mandelbrot/src/logger",
        "//mandelbrot/src/utils",
        "//third_party/cli11",
        "@com_fmtlib_fmt//:fmt",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_glog//:glog",
    ],
)
