load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "repl",
    srcs = ["repl.cc"],
    hdrs = ["repl.h"],
    deps = [
        "//third_party/linenoise",
        "@com_fmtlib_fmt//:fmt",
        "@com_google_absl//absl/strings:str_format",
    ],
)
